--- a/css/dev/02-goran/15-responsive3.css
+++ b/css/dev/02-goran/15-responsive3.css
@@ -19,7 +19,7 @@
 	}
 	.content-area,
 	.main-navigation {
-		width: 560px;
+		width: 720px;
 	}
 	.site-branding {
 		width: 244px;
