--- a/css/dev/40-pricing.css
+++ b/css/dev/40-pricing.css
@@ -106,6 +106,7 @@ margin-bottom: 1em;
 .plan-tier {
 background: white;
 vertical-align: top;
+margin-bottom: 1em;
 border: 1px solid #e74f4e;
 border-radius: 3px;
 -moz-border-radius: 3px;
